2000-04-01  Ken Raeburn  <raeburn@gnu.org>

	* alloc.c (MARK_STRING, UNMARK_STRING, STRING_MARKED_P): Expand
	non-union-type versions of XMARK and friends here, because XMARK
	and friends won't work on an integer field if NO_UNION_TYPE is not
	defined.
	(make_number): Define as a function if it's not defined as a
	macro.

	* editfns.c (text_property_stickiness): Use NILP to test
	Lisp_Object boolean value.
	(Fmessage_or_box): Don't use NILP to test int variable.
	(Fformat): Use a temporary variable to avoid ENABLE_CHECKING
	problems reading from and changing the same lisp value in an
	XSETSTRING call.

2000-04-01  Gerd Moellmann  <gerd@gnu.org>

	* term.c (TN_no_color_video): New variable.
	(term_init): Intitialize TN_no_color_video.
	(enum no_color_bit): New enumeration.
	(MAY_USE_WITH_COLORS_P): New macro.
	(turn_on_face): Use it to determine if attributes may be used
	combined with colors.

2000-04-01  Ken Raeburn  <raeburn@gnu.org>

	* window.c (CURBEG, CURSIZE): Don't overload lisp object lvalues
	with int lvalues via casts; instead, just yield lisp object
	lvalues.
	(enlarge_window): Variable sizep now points to Lisp_Object.  Use
	proper accessor macros.
	(shrink_window_lowest_first): w->top is Lisp_Object; use XINT.
	(grow_mini_window): Fix typo getting int value of root->height.

	* xdisp.c (compute_string_pos): Fix order of arguments to
	string_pos_nchars_ahead.
	(handle_fontified_prop, add_to_log): Pass int, not Lisp_Object, as
	count arg to variable-arg routines like Frun_hook_with_args and
	Fformat.
	(back_to_previous_visible_line_start,
	build_desired_tool_bar_string): Pass Lisp_Object, not int, to
	fixed-arg routines like Fget_char_property and Fmake_string.
	(reconsider_clip_changes): Use XINT when comparing integer lisp
	objects, or passing them as int arguments.
	(mark_window_display_accurate, insert_left_trunc_glyphs,
	append_space, extend_face_to_end_of_line): Use make_number when
	storing or passing integer values as lisp objects.